--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #f5f3f3;
+   overflow: hidden;
+ 
 }
 
 code {
