--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -28,7 +28,7 @@
 /* Remaining Items */
 .timeline .timeline_dot {
     color: black !important;
-    background-color: var(--main-color) !important;
+    border-color: var(--main-color) !important;
     font-size: small !important;
     padding: 2px !important;
 }
@@ -37,4 +37,16 @@
    
     background-color: #eee !important;
    
+}
+.timeline .timeline_dot_header > .MuiSvgIcon-root {
+    font-size: 20px;
+    color: darkslategray;
+}
+
+.timeline .separator_padding {
+    padding-left: 18px !important;
+}
+.timeline .timeline_content {
+    padding-top: 0px !important;
+    margin-bottom: 20px;
 }
