--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -41,6 +41,10 @@
     color:#787878 !important;
     font-weight: 400 !important;
 }
+.timelineItem_text > a {
+    color:#787878 !important;
+    text-decoration: none;
+}
 .timelineItem_text > span {
     color:black;
 }
