--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -22,6 +22,15 @@
     align-items: center !important;
     justify-content: center !important;
 }
-.custom_btn .btn_text {
 
+.custom_btn .btn_icon_container > .MuiSvgIcon-root{
+    font-size: 16px !important;
+}
+.custom_btn .btn_text {
+ font-size: 14px !important;
+ text-transform: none !important;
+ text-align: center;
+ width: 100%;
+ margin-right: 5px;
+ margin-left: 5px;
 }
