--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -48,3 +48,9 @@
 .timelineItem_text > span {
     color:black;
 }
+.profile .button_container {
+    width: 100%;
+    display: flex !important;
+    justify-content: center;
+    margin-top: 20px;
+}
