--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,3 +16,25 @@
     font-weight: 500;
     color: var(--main-color) !important;
 }
+.header .header_home {
+    background-color: var(--main-color);
+    padding:22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+
+}
+.header .header_left {
+    margin-right: auto;
+}
+.header .header_right {
+    display: flex !important;
+    align-items: center !important;
+}
+.header .header_right > a > .MuiSvgIcon-root{
+    font-size: 16px !important;
+    margin-right: 12px;
+    color: black;
+}
