--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 :root {
   --main-color:#ffc500;
 }
+
 /* marge & padding */
 .top_60 {
   margin-top: 60px !important;
@@ -23,4 +24,35 @@
   -moz-border-radius:6px;
   -webkit-border-radius:6px;
   margin-bottom: 30px;
+  padding: 30px;
 }
+.section_title {
+  position:relative;
+  display: inline-block;
+  padding: 0 3px;
+}/*
+.section_title .section_title_text {
+  font-size: 18px;
+  font-weight: 600;
+  position: relative;
+  margin: 0;
+}*/
+
+.section_title .section_title_text {
+  
+  text-decoration: underline overline var(--main-color);
+ 
+}
+
+/*
+.section_title span {
+  position: absolute;
+  height: 7px;
+  width: 100%;
+  bottom: 0;
+  opacity: 0.4;
+  left: 0;
+  background-color: var(--main-color);
+
+}*/
+
