--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,21 @@
 .top_60 {
   margin-top: 60px !important;
 }
+
+.top_30 {
+  margin-top: 30px !important;
+}
+.mb_30 {
+  margin-bottom: 30px !important;
+}
+.p_30 {
+  padding: 30px !important;
+}
+
+.pb_45 {
+  padding-bottom: 45px !important;
+}
+
 @media(max-width:991px){
   .top_60 {
     margin-top: 30px !important;
