projet site web perso

--- a/src/pages/Resume/Resume.css
+++ b/src/pages/Resume/Resume.css
@@ -24,3 +24,47 @@
    
 }
 /* fin de Timeline section */
+
+/* section services */
+.service {
+    height: 100%;
+    text-align: center;
+
+}
+.service .service_title{
+    font-size: 16px !important;
+    font-weight: 500 !important;
+    line-height: 35px !important;
+    text-align: center !important;
+}
+.service .service_description {
+    color: #989898 !important;
+    border-color: var(--main-color) !important;
+    margin-right: 5px !important;
+    text-align: center !important;
+}
+.service_icon > .MuiSvgIcon-root {
+    font-size: 46px !important;
+    margin-left: 0 !important;
+    font-weight: 300 !important;
+    color: darkslategray !important;
+}
+
+/* fin section services */
+
+/* skills */
+.skill {
+
+}
+.skill .skill_title {
+    
+}
+.skill .skill_description{
+    
+}
+.skill .skill_description .timeline_dot{
+    
+}
+
+
+/* fin skills */
