--- a/src/App.css
+++ b/src/App.css
@@ -16,9 +16,14 @@
 .p_30 {
   padding: 30px !important;
 }
-
+.p_50 {
+  padding: 50px !important;
+}
 .pb_45 {
   padding-bottom: 45px !important;
+}
+.pt_45 {
+  padding-top: 45px !important;
 }
 
 @media(max-width:991px){
@@ -39,27 +44,27 @@
   -moz-border-radius:6px;
   -webkit-border-radius:6px;
   margin-bottom: 30px;
-  padding: 30px;
+ 
 }
 .section_title {
   position:relative;
   display: inline-block;
   padding: 0 3px;
-}/*
+}
 .section_title .section_title_text {
   font-size: 18px;
   font-weight: 600;
   position: relative;
   margin: 0;
-}*/
-
+}
+/*
 .section_title .section_title_text {
   
   text-decoration: underline overline var(--main-color);
  
 }
 
-/*
+*/
 .section_title span {
   position: absolute;
   height: 7px;
@@ -69,5 +74,12 @@
   left: 0;
   background-color: var(--main-color);
 
-}*/
+}
+.section {
+  padding-left: 30px ;
+  padding-right: 30px;
+}
 
+.graybg {
+  background-color: #fafafa;
+}
