--- a/src/pages/Resume/Resume.css
+++ b/src/pages/Resume/Resume.css
@@ -83,6 +83,22 @@
 
 /* section contact */
 
-
+.contactInfo_item {
+font-size: 13px !important;
+color: #787878;
+line-height: 34px !important;
+} 
+.contactInfo_item > span {
+color: black;
+font-weight: 500;
+}
+.contactInfo_socialsContainer {
+margin-top: 25px;
+}
+.contactInfo_social > a > .MuiSvgIcon-root {
+font-size: 16px !important;
+margin-right: 10px;
+color: black !important;
+}
 
 /* fin de section contact */
