--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,9 @@
 .mb_30 {
   margin-bottom: 30px !important;
 }
+.mb_20 {
+  margin-bottom: 20px !important;
+}
 .p_30 {
   padding: 30px !important;
 }
