--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,4 +1,5 @@
 .custom_btn {
+    font-family: "iA Writer Mono";
     background-color: var(--main-color) !important;
     font-size: 14px !important;
     font-weight: 500 !important;
@@ -10,7 +11,7 @@
     outline: none !important;
 }
 .custom_btn .btn_icon_container {
-
+    font-family: "iA Writer Mono";
     color: #000 !important;
     background: #fff !important;
     border-radius: 50px !important;
@@ -27,6 +28,7 @@
     font-size: 16px !important;
 }
 .custom_btn .btn_text {
+    font-family: "iA Writer Mono";
  font-size: 14px !important;
  text-transform: none !important;
  text-align: center;
