--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,5 @@
 .footer {
+font-family: "iA Writer Mono";
 background-color: #1e1e1e;
 color: white;
 display: flex;
@@ -10,14 +11,17 @@ border-radius: 8px;
 padding: 20px 25px;
 }
 .footer .footer_name {
+    font-family: "iA Writer Mono";
     font-size: small;
 }
 .footer .footer_copyright{
+font-family: "iA Writer Mono";
 font-size: small;
 text-align: end;
 color: #9c9c9c;    
 }
 .footer .footer_copyright > a{
+    font-family: "iA Writer Mono";
    text-decoration: none !important;
    color: var(--main-color);    
     }
