--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,5 @@
 .header {
+    font-family: "iA Writer Mono";
     margin-bottom: 30px !important;
     background-color: white !important;
     padding: 0 22px 0 0 !important;
@@ -6,10 +7,12 @@
     box-shadow: 0px 2px 92px 0px rgba(0, 0, 0, 0.07) !important;
 }
 .header .header_link {
+    font-family: "iA Writer Mono";
     font-weight:500;
     color: darkslategray !important;
 }
 .header .header_link:hover {
+    font-family: "iA Writer Mono";
     color: var(--main-color) !important;
 }
 .header .header_link_active {
@@ -17,6 +20,7 @@
     color: var(--main-color) !important;
 }
 .header .header_home {
+    font-family: "iA Writer Mono";
     background-color: var(--main-color);
     padding:22px;
     display: flex;
@@ -30,10 +34,12 @@
     margin-right: auto;
 }
 .header .header_right {
+    font-family: "iA Writer Mono";
     display: flex !important;
     align-items: center !important;
 }
 .header .header_right > a > .MuiSvgIcon-root{
+    font-family: "iA Writer Mono";
     font-size: 16px !important;
     margin-right: 12px;
     color: black;
