--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -1,4 +1,5 @@
 .timeline {
+    font-family: "iA Writer Mono";
     padding: 0 !important;
 }
 /* Header */
@@ -6,19 +7,24 @@
 
 /* Header title */
 .timeline .timeline_header {
+    font-family: "iA Writer Mono";
     padding-top:7px;
 }
 .timeline .timeline_firstItem {
+    font-family: "iA Writer Mono";
     min-height: 80px !important;
 }
 
 .timeline .MuiTimelineItem-root {
+    font-family: "iA Writer Mono";
     min-height: 0px;
 }
 .timeline .MuiTimelineItem-missingOppositeContent:before {
+  
     display: none;
 }
 .timeline .timeline_dot_header {
+    font-family: "iA Writer Mono";
     color: black !important;
     background-color: var(--main-color) !important;
     font-size: small !important;
@@ -34,19 +40,22 @@
 }
 
 .timeline .MuiTimelineConnector-root {
-   
+    font-family: "iA Writer Mono";
     background-color: #eee !important;
-   
+
 }
 .timeline .timeline_dot_header > .MuiSvgIcon-root {
+    font-family: "iA Writer Mono";
     font-size: 20px;
     color: darkslategray;
 }
 
 .timeline .separator_padding {
+    font-family: "iA Writer Mono";
     padding-left: 18px !important;
 }
 .timeline .timeline_content {
+    font-family: "iA Writer Mono";
     padding-top: 0px !important;
     margin-bottom: 20px;
 }
