--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,21 @@
 * {
   margin: 0;
+  font-family: "iA Writer Mono";
+}
+.{
+  font-family: "iA Writer Mono";
 }
 
 body {
-
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "iA Writer Mono";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #f5f3f3;
-   overflow-x: hidden;
- 
+  overflow-x: hidden;
+
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
