--- a/src/pages/Resume/Resume.css
+++ b/src/pages/Resume/Resume.css
@@ -1,4 +1,5 @@
 .aboutme_text {
+    font-family: "iA Writer Mono";
     color: darkslategray !important;
     font: smaller !important;
     line-height: 22px !important;
@@ -9,16 +10,19 @@
 
 /* Timeline section */
 .resume_timeline .timeline_content .timeline_title {
+    font-family: "iA Writer Mono";
     font-size: 16px !important;
     font-weight: 500 !important;
 }
 
 .resume_timeline .timeline_content .timeline_description {
+    font-family: "iA Writer Mono";
     color: rgb(37, 68, 68) !important;
     margin-top: 6px !important;
 }
 
 .resume_timeline .timeline_content .timeline_lien {
+    font-family: "iA Writer Mono";
     color: gray !important;
     font-size: small !important;
    
@@ -27,23 +31,27 @@
 
 /* section services */
 .service {
+    font-family: "iA Writer Mono";
     height: 100%;
     text-align: center;
 
 }
 .service .service_title{
+    font-family: "iA Writer Mono";
     font-size: 16px !important;
     font-weight: 500 !important;
     line-height: 35px !important;
     text-align: center !important;
 }
 .service .service_description {
+    font-family: "iA Writer Mono";
     color: #989898 !important;
     border-color: var(--main-color) !important;
     margin-right: 5px !important;
     text-align: center !important;
 }
 .service_icon > .MuiSvgIcon-root {
+    font-family: "iA Writer Mono";
     font-size: 46px !important;
     margin-left: 0 !important;
     font-weight: 300 !important;
@@ -54,6 +62,7 @@
 
 /* skills */
 .skill {
+    font-family: "iA Writer Mono";
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0px 0px 48px 0px rgba(4, 6,4, 0.08) !important;
@@ -61,11 +70,13 @@
     height: 100%;
 }
 .skill .skill_title {
+    font-family: "iA Writer Mono";
     font-size: 14px !important;
     font-weight: 500 !important;
     line-height: 35px !important;
 }
 .skill .skill_description{
+    font-family: "iA Writer Mono";
     display: flex;
     align-items: center;
     color: #989898 !important;
@@ -73,6 +84,7 @@
     line-height: 18px !important;
 }
 .skill .skill_description .timeline_dot{
+    font-family: "iA Writer Mono";
     border-color: var(--main-color) !important;
     padding: 2px !important;
     margin-right:5px !important ;
@@ -84,18 +96,22 @@
 /* section contact */
 
 .contactInfo_item {
+    font-family: "iA Writer Mono";
 font-size: 13px !important;
 color: #787878;
 line-height: 34px !important;
 } 
 .contactInfo_item > span {
+    font-family: "iA Writer Mono";
 color: black;
 font-weight: 500;
 }
 .contactInfo_socialsContainer {
+    font-family: "iA Writer Mono";
 margin-top: 25px;
 }
 .contactInfo_social > a > .MuiSvgIcon-root {
+    font-family: "iA Writer Mono";
 font-size: 16px !important;
 margin-right: 10px;
 color: black !important;
